--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
-line-bot-sdk==2.4.2
-psycopg2-binary==2.9.3
-python-dotenv==0.19.0
-SQLAlchemy==1.4.23
-Flask-SQLAlchemy==2.5.1
-alembic==1.7.4
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+line-bot-sdk==3.7.0
+python-dotenv==1.0.0
+psycopg2==2.9.9
+alembic==1.13.1
+geopy==2.4.1
